parser/mindfck.g4
grammar mindfck;

statements: statement*;

statement:
	declaration
	| arrayDeclaration
	| assignment
	| print
	| ifConditional
	| whileLoop
	| read;

declaration:
	type = (BYTE | INT) identifier (EQUALS expression)?;

arrayDeclaration:
	type = (BYTE | BYTE) identifier '[' arrayIndex ']' (
		EQUALS expression
	)?;

assignment: identifier ('[' arrayIndex ']')? EQUALS expression;

print: PRINT expression;

ifConditional:
	IF '(' expression ')' '{' block '}' (ELSE '{' block '}')?;

whileLoop: WHILE '(' expression ')' '{' block '}';

read: READ identifier;

block: statement*;

expression:
	identifier
	| literal
	| expression '[' arrayIndex ']'
	| '(' expression ')'
	| NOT expression
	| expression op = (TIMES | DIVIDE) expression
	| expression op = (PLUS | MINUS) expression
	| expression op = (GT | GE | LT | LE | EQUALS | DEQUALS) expression
	| expression op = (AND | AND) expression
	// AND | AND is just a hack to support op for convenience in visitor
	| expression op = (OR | OR) expression;

identifier: IDENTIFIER;

literal: NUMBER | CHAR | BYTE_NUMBER | arrayLiteral;

arrayLiteral: '[' (arrayItem (',' arrayItem)*)? ']';
arrayItem: NUMBER | BYTE_NUMBER;

arrayIndex: NUMBER;

CHAR: '\'' EXT_ASCII_CHAR '\'';
BYTE_NUMBER: NUMBER 'b';

fragment EXT_ASCII_CHAR:
	[\u0000-\u00FF]; // Matches characters in the range 0–255 (extended ASCII).

WS: [ \n\t\r]+ -> channel(HIDDEN);
BYTE: 'byte';
INT: 'int';
PRINT: 'print';
IF: 'if';
ELSE: 'else';
WHILE: 'while';
READ: 'read';
PLUS: '+';
MINUS: '-';
TIMES: '*';
DIVIDE: '/';
EQUALS: '=';
DEQUALS: '==';
AND: 'and';
OR: 'or';
NOT: 'not ' | '!';
GT: '>';
GE: '>=';
LT: '<';
LE: '<=';
NUMBER: [0-9]+;
IDENTIFIER: [a-zA-Z]+;
